Major refactor (#636)