@@ -9,7 +9,6 @@ import net.dv8tion.jda.api.interactions.commands.build.OptionData;
 import org.jetbrains.annotations.NotNull;
 import org.springframework.stereotype.Component;
 
-import java.util.Arrays;
 import java.util.List;
 
 @Component
@@ -42,7 +41,7 @@ public class Magic8BallCommand implements SlashCommand {
 
     @Override
     public List<OptionData> getCommandOptions() {
-        return Arrays.asList(new OptionData(OptionType.STRING, Magic8BallCommandName.Option.QUESTION.get(), "Your "
+        return List.of(new OptionData(OptionType.STRING, Magic8BallCommandName.Option.QUESTION.get(), "Your "
                 + "question to the 8 ball."));
     }
 }
